--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "docker": "docker build . -t fastcampus",
+    "start:production": "docker run -p 3000:3000 fastcampus"
   },
   "dependencies": {
+    "docker": "1.0.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "12.1.3",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "5.12.0",
@@ -21,6 +27,8 @@
     "eslint": "8.9.0",
     "eslint-config-airbnb-typescript": "16.1.0",
     "eslint-config-next": "12.1.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "27.5.1",
     "typescript": "4.5.5"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
